Developed the API to get files based on the folder id
